Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 <li>Follow these <a href="http://developers.overwolf.com/odk-2-0-introduction/">directions</a> but substitute the names.</li>
 <li>Play Hawken! Chat with the cool kids!</li>
 </ol>
+
+<h2>
+<a name="in-action" class="anchor" href="#in-action"><span class="octicon octicon-link"></span></a>In Action</h2>
+
+<p><a href="https://www.youtube.com/watch?v=VqSkXr1BEH0">ScrimIRC - It Works!!</a> (youTube)</p>
       </section>
     </div>
     <footer>
